// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="Homepage hero-home"
  >
    <div
      class="container text-center"
    >
      <div
        class="greeting"
      >
        <h1
          class="mb-4 font-weight-bold"
        >
          Traveler
        </h1>
        <p
          class="lead"
        >
           Share the world with others. 
        </p>
        <h2>
          Welcome Back, testfirst!
        </h2>
      </div>
      <div
        class="photo-cred"
      >
        Photo by
        <a
          href="https://unsplash.com/@spencerdavis?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
        >
          Spencer Davis
        </a>
         on 
        <a
          href="https://unsplash.com/photos/person-walking-near-the-great-sphinx-ONVA6s03hg8?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
        >
          Unsplash
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`matches snapshot when logged out 1`] = `
<DocumentFragment>
  <div
    class="Homepage hero-home"
  >
    <div
      class="container text-center"
    >
      <div
        class="greeting"
      >
        <h1
          class="mb-4 font-weight-bold"
        >
          Traveler
        </h1>
        <p
          class="lead"
        >
           Share the world with others. 
        </p>
        <p>
          <a
            class="btn btn-primary font-weight-bold mr-3"
            href="/login"
          >
            Log in
          </a>
          <a
            class="btn btn-primary font-weight-bold"
            href="/signup"
          >
            Sign up
          </a>
        </p>
      </div>
      <div
        class="photo-cred"
      >
        Photo by
        <a
          href="https://unsplash.com/@spencerdavis?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
        >
          Spencer Davis
        </a>
         on 
        <a
          href="https://unsplash.com/photos/person-walking-near-the-great-sphinx-ONVA6s03hg8?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
        >
          Unsplash
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
